# com.webos.service.unifiedsearch

./: .gitignore  CMakeLists.txt  README.md
.pc/: applied-patches
.pc/0001-Fix-build-with-gcc-12.patch/src/util/: LinuxProcess.cpp
core/: CMakeLists.txt  Category.cpp  Category.h  DataSource.h  Intent.cpp  Intent.h  Logger.h  LunaClient.cpp  LunaClient.h  Plugin.h  SearchItem.cpp  SearchItem.h  SearchSet.cpp  SearchSet.h
files/conf/: unifiedsearch.json.in
files/sysbus/: com.webos.service.unifiedsearch.api.json  com.webos.service.unifiedsearch.groups.json  com.webos.service.unifiedsearch.perm.json  com.webos.service.unifiedsearch.role.json.in  com.webos.service.unifiedsearch.service.in
patches/: 0001-Fix-build-with-gcc-12.patch  series
plugins/media/: CMakeLists.txt  DB8.cpp  DB8.h  DB8Category.cpp  DB8Category.h  DB8Source.cpp  DB8Source.h  MediaPlugin.cpp  MediaPlugin.h
plugins/media/scripts/: execute_mediaindexer_on_session.sh
src/: CMakeLists.txt  Environment.h.in  Main.cpp  MainDaemon.cpp  MainDaemon.h
src/base/: Category.cpp  Category.h  CategoryList.cpp  CategoryList.h  Database.cpp  Database.h  DatabaseList.cpp  DatabaseList.h  Intent.cpp  Intent.h  SearchItem.cpp  SearchItem.h  SearchManager.cpp  SearchManager.h
src/bus/client/: AbsLunaClient.cpp  AbsLunaClient.h  Configd.cpp  Configd.h  SAM.cpp  SAM.h  SettingService.cpp  SettingService.h
src/bus/service/: UnifiedSearch.cpp  UnifiedSearch.h
src/clients/: AppContents.cpp  AppContents.h  Applications.cpp  Applications.h
src/conf/: ConfFile.cpp  ConfFile.h
src/interface/: IClassName.h  IInitializable.h  ISerializable.h  ISingleton.h
src/util/: File.cpp  File.h  JValueUtil.cpp  JValueUtil.h  LinuxProcess.cpp  LinuxProcess.h  Logger.cpp  Time.cpp  Time.h
